--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,6 +25,9 @@
             <a class="nav-link" href="/user/form">Form</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/user/login">LoginForm</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link disabled">Disabled</a>
           </li>
         </ul>
