--- a/views/pages/createUser.ejs
+++ b/views/pages/createUser.ejs
@@ -3,9 +3,15 @@
   <%- include('../partials/head'); %>
   <body>
     <%- include('../partials/header') %>
-    <h1 style="text-align: center"><%= title %></h1>
-    <p style="text-align: center">Welcome to my EJS page!</p>
-    <%- include('../partials/form') %>
+    <div class="container">
+      <div class="row">
+        <h1 style="text-align: center"><%= title %></h1>
+      </div>
+      <div class="row">
+        <p style="text-align: center">Welcome to my EJS page!</p>
+      </div>
+      <div class="row"><%- include('../partials/form') %></div>
+    </div>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
