--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -3,9 +3,10 @@
   <%- include('../partials/head'); %>
   <body>
     <%- include('../partials/header') %>
-    <h1>Welcome <%= user.name %>!</h1>
-    <p>Email: <%= user.email %></p>
-    <p>Age: <%= user.age %></p>
+    <div class="container">
+      <h1 style="text-align: center">Welcome <%= user.name %>!</h1>
+      <p style="text-align: center">Email: <%= user.email %></p>
+    </div>
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
